--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,8 @@ header div div div ul li button {
     text-shadow: 1px 2px 1px #a2c8ec; }
 
 .miembros, .imagenarmy, .discografia {
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 300px;
   border-style: none;
   border-radius: 0.4em;
   border-color: none;
@@ -81,5 +81,4 @@ body {
   font-size: larger; }
 
 html {
-  height: 100%; 
-}
+  height: 100%; }
