--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,30 @@
-header div div img {
-  width: 100px;
-  height: 100px;
-  border-style: outset;
-  border-radius: 10em;
-  border-color: black;
-  margin-top: 0.5em;
-  margin-bottom: 0.5em; }
-
-header div div div ul li button {
-  border-style: unset;
-  border-radius: 0.5em;
-  border-color: none;
-  background-color: whitesmoke;
-  font-weight: 700;
-  padding: 0.2em;
-  margin-top: 0.5em;
-  transition: transform 0.2s; }
-  header div div div ul li button:hover {
-    transform: scale(1.1);
-    background-color: #a2c8ec; }
-  header div div div ul li button a {
-    text-decoration: none;
-    color: black;
+header {
+  border-bottom: 1px solid whitesmoke; }
+  header div div img {
+    width: 100px;
+    height: 100px;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em; }
+  header div div div ul li button {
+    border-style: unset;
+    border-radius: 0.5em;
+    border-color: none;
+    background-color: whitesmoke;
     font-weight: 700;
-    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-    margin-left: 1em;
-    margin-right: 1em;
-    text-shadow: 1px 2px 1px #a2c8ec; }
+    padding: 0.2em;
+    margin-top: 0.5em;
+    transition: transform 0.2s; }
+    header div div div ul li button:hover {
+      transform: scale(1.1);
+      background-color: #a2c8ec; }
+    header div div div ul li button a {
+      text-decoration: none;
+      color: black;
+      font-weight: 700;
+      font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+      margin-left: 1em;
+      margin-right: 1em;
+      text-shadow: 1px 2px 1px #a2c8ec; }
 
 .miembros, .imagenarmy, .discografia {
   width: 300px;
@@ -64,11 +62,21 @@ iframe {
   animation: flipInY;
   animation-duration: 1.5s; }
 
+main {
+  margin-top: 1em;
+  margin-bottom: 1em; }
+
 footer div section p a img {
   width: 25px;
   height: 25px;
   margin-left: 1.5em;
   margin-right: 1.5em;
+  margin-top: 1em; }
+
+footer {
+  border-top: 1px solid whitesmoke; }
+
+footer div section {
   margin-top: 1em; }
 
 * {
