--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -9,3 +9,10 @@ footer div section p a img {
   margin-right: 1.5em;
   margin-top: 1em;
 }
+footer{
+  border-top: 1px solid whitesmoke;
+  
+}
+footer div section{
+  margin-top: 1em;
+}
